welcome.lessons.welcome.array.array667.Array667.scala.error
array667:3: error: value lenght is not a member of Array[Int]
  var n = nums.lenght
               ^