welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
  var compt = 0
  var n = nums.lenght
  for (k<-0 to n-2){
    if (nums(k)==6 &&  nums(k+1)==6 || nums(k+1)==7){
      compt=compt+1
    }
    else compt=compt
  }
  return compt
}